-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.2.0
-
None
-
3
-
4762
When using a default stripe count of -1, the stripe count reported for newly created directory is bogus. Here is how to reproduce:
[root@client-4 tests]# export STRIPES_PER_OBJ=-1
[root@client-4 tests]# sh ./llmount.sh
[...]
[root@client-4 tests]# lfs getstripe -d /mnt/lustre
stripe_count: -1 stripe_size: 1048576 stripe_offset: -1
[root@client-4 tests]# mkdir /mnt/lustre/foo
[root@client-4 tests]# lfs getstripe -d /mnt/lustre/foo
stripe_count: 4294967295 stripe_size: 1048576 stripe_offset: -1
^^^^^^^^^^
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.1 to version 2.1.2 Server support for kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1.el6 (RHEL6) Client support for unpatched kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....